[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pyactivityPub"
authors = [{name = "Euiseo Cha", email = "zeroday0619_dev@outlook.com"}]
maintainers = [{name = "Euiseo Cha", email = "zeroday0619_dev@outlook.com"}]
readme = "README.md"

classifiers = [
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.10"
dynamic = ["version", "description"]
